# rocnikova_praca_tretia_a

./: .gitignore  README.md
Controller_arduino/: ControllerModel.FCStd  ControllerModel.FCStd1  Controller_arduino.ino
backend/: README.md  pom.xml
backend/src/main/java/org/acme/rocnikova/praca/: ExampleResource.java
backend/src/test/java/org/acme/rocnikova/praca/: ExampleResourceIT.java  ExampleResourceTest.java
controller/: Controller_arduino.ino
frontend/: package-lock.json
game/: Ball.cs  Ball.tscn  CMakeLists.txt  Main.tscn  Paddle.cs  Paddle.tscn  Paddle0.cs  Paddle0.tscn  Pong!.csproj  Pong!.sln  console-game.hpp  icon.svg.import  main.cpp  project.godot
game/ball/: Ball.cpp  Ball.hpp
game/ble-client/: BleClient.cpp  BleClient.hpp
game/ble-server/: BleServer.cpp  BleServer.hpp
game/game-object/: GameObject.cpp  GameObject.hpp
game/paddle/: Paddle.cpp  Paddle.hpp
game/pong/: Pong.cpp  Pong.hpp
